# Reflection

./: .gitmodules  CMakelists.txt  LICENSE  Readme.md
Core/: Core.h  Platform.h
MethodReflection/: MethodInfo.h  MethodMacro.h
PropertyReflection/: PropertyInfo.h  PropertyMacro.h
TypeReflection/: TypeCast.h  TypeInfo.cpp  TypeInfo.h  TypeInfoManager.cpp  TypeInfoManager.h  TypeMacro.h  TypeManager.cpp  TypeManager.h  TypeUtils.cpp  TypeUtils.h
cmake/: ExternalProject.cmake  Library.cmake  Project.cmake
demofile/: CMakelists.txt  main.cpp
externaldemofile/: CMakeLists.txt  main.cpp
include/: Macro.h  Reflection.h  Utils.h
include/Method/: MethodCall.h  MethodInfo.h  MethodMacro.h
include/Property/: ContainerPropertyInfo.h  PropertyCreator.h  PropertyInfo.h  PropertyMacro.h
include/Reflection/: Macro.h  MethodInfo.h  PropertyInfo.h  Reflection.h  TypeCast.h  TypeInfo.h  TypeManager.h  Utils.h
include/Type/: TypeCast.h  TypeInfo.h  TypeMacro.h  TypeManager.h
src/: TypeInfo.cpp  TypeManager.cpp  Utils.cpp
src/Method/: MethodInfo.cpp
src/Property/: PropertyInfo.cpp
src/Type/: TypeCast.cpp  TypeInfo.cpp  TypeManager.cpp
